# pytest-table-driven-tests

./: README.md  justfile  main.py  pyproject.toml
src/nikitabarskov/url_shortener/: app.py  db.py  routes.py  shortener.py
tests/: conftest.py  test_routes.py  test_shortener.py
