[project]
name = "nikitabarskov-url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.123.0",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "deepdiff>=8.6.1",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
    "ty>=0.0.1a29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nikitabarskov"]
